--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
           <div class="card-body">
             <h5 class="card-title">Welcome</h5>
             <p class="card-text">Click Below to create your first schedule and get started!</p>
-            <a href="#" class="btn btn-primary">Lets Go</a>
+            <button type="button" class="btn btn-primary">Start!</button>
+            <button type="button" class="btn btn-primary">Cancel</button>
           </div>
         </div>
       </div>
