--- a/main.html
+++ b/main.html
@@ -5,16 +5,20 @@
     <title>My BCIT Project</title>
     <meta name="comp1800 template" content="My 1800 App">
 
+    <!------------------------>
     <!-- Required meta tags -->
+    <!------------------------>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap Library CSS CDN go here -->
+    <!------------------------------------------>
+    <!-- Bootstrap Library CSS JS CDN go here -->
+    <!------------------------------------------>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <!-- Boostrap Library JS CDN  go here -->
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
+    </script>
 
     <!-------------------------------------------------------->
     <!-- Firebase 8 Library related CSS, JS, JQuery go here -->
@@ -26,18 +30,23 @@
     <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script> 
     <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
-    
-    <!-- Other libraries go here -->
-    <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
-    <!-- Link to styles of your own -->
+
+    <!-------------------------------------------->
+    <!-- Other libraries and styles of your own -->
+    <!-------------------------------------------->
     <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
+    <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
+    <!-- <link rel="stylesheet" href="./styles/style.css"> -->
 
 </head>
 
 <body>
-
     <!------------------------------>
     <!-- Your HTML Layout go here -->
+    <!------------------------------>
+
+    <!-- Our own navbar goes here -->
     <nav class="navbar navbar-expand-lg navbar-light bg-info">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">RoutineSync</a>
@@ -63,17 +72,16 @@
         </div>
       </nav>
 
-      <div class="d-flex justify-content-center align-items-center" style="height: 30vh;">
-        <div class="card" style="width: 100rem;">
-          <div class="card-body">
-            <h5 class="card-title">Ready to Start a Consistent Routine?</h5>
-            <p class="card-text">Click Below to Create Your First Schedule and Get Started Today!</p>
-            <a href="login.html" class="btn btn-primary" role="button">Start</a>
-          </div>
+    <!-- The body of your page goes here -->
+    <div class="container-fluid bg-white text-dark p-5">
+        <div class="container bg-white p-5">
+            <h1 class="display-4">Welcome, <br> <span id="name-goes-here"></span></h1>
+            <hr>
         </div>
-      </div>
-      
-      <nav class="navbar fixed-bottom bg-info">
+    </div>
+
+    <!-- Our own footer goes here-->
+          <nav class="navbar fixed-bottom bg-info">
             <div class="navicons">
                 <div class="home">
                     <a class="navbar-brand" href="#"><i class='bx bx-home' ></i></a>
@@ -87,20 +95,13 @@
             </div>
           </div>
         </nav>
-    <!------------------------------>
-    <!-- Stuff for body goes here -->
-
 
     <!---------------------------------------------->
     <!-- Your own JavaScript functions go here    -->
     <!---------------------------------------------->
     <script src="./scripts/firebaseAPI_TEAM05.js"></script>
     <script src="./scripts/skeleton.js"></script>
-    <script>
-        logout();       //make sure user is logged out
-    </script>
-
-    <!-- Link to scripts of your own -->
+    <script src="./scripts/main.js"></script>
     <!-- <script src="./scripts/script.js"></script> -->
 
 </body>
