moved welcome card to dropdown banner that plays when page is loaded cause schedule would be where the welcome is, right now the banner plays everytime you load the page but i will change it to only play when coming from the login page soon cause its kind of annoying if it plays everytime you view your schedule.

--- a/main.html
+++ b/main.html
@@ -72,13 +72,13 @@
         </div>
       </nav>
 
+      <!--Dropdown welcome banner on page load-->
+      <div id="banner" class="banner">
+        <h1 class="display-4">Welcome,  <span id="name-goes-here"></span></h1>
+      </div>
+      
+
     <!-- The body of your page goes here -->
-    <div class="container-fluid bg-white text-dark p-5">
-        <div class="container bg-white p-5">
-            <h1 class="display-4">Welcome, <br> <span id="name-goes-here"></span></h1>
-            <hr>
-        </div>
-    </div>
 
     <!-- Our own footer goes here-->
           <nav class="navbar fixed-bottom bg-info">
