--- a/profile.html
+++ b/profile.html
@@ -71,12 +71,8 @@
           </div>
         </div>
       </nav>
-
-      <!--Dropdown welcome banner on page load-->
-      <div id="banner" class="banner">
-        <h1 class="display-4">Welcome,  <span id="name-goes-here"></span></h1>
-      </div>
       
+      <h1>PROFILE TEST</h1>
 
     <!-- The body of your page goes here -->
 
@@ -84,13 +80,13 @@
           <nav class="navbar fixed-bottom bg-info">
             <div class="navicons">
                 <div class="home">
-                    <a class="navbar-brand" href="#"><i class='bx bx-home' ></i></a>
+                    <a class="navbar-brand" href="main.html"><i class='bx bx-home' ></i></a>
                 </div>
                 <div class="timers">
                     <a class="navbar-brand" href="#"><i class='bx bx-time-five' ></i></a>
                 </div>
                 <div class="user">
-                    <a class="navbar-brand" href="login.html"><i class='bx bx-user-circle' ></i></a>
+                    <a class="navbar-brand" href="#"><i class='bx bx-user-circle' ></i></a>
                 </div>
             </div>
           </div>
