added profile page that has user name and email, added variable for user email, linked profile button to profile and home button to home.

--- a/main.html
+++ b/main.html
@@ -74,7 +74,7 @@
 
       <!--Dropdown welcome banner on page load-->
       <div id="banner" class="banner">
-        <h1 class="display-4">Welcome,  <span id="name-goes-here"></span></h1>
+        <p id = "display-4"> Welcome,  <span id="name-goes-here"></span></p>
       </div>
       
 
@@ -90,7 +90,7 @@
                     <a class="navbar-brand" href="#"><i class='bx bx-time-five' ></i></a>
                 </div>
                 <div class="user">
-                    <a class="navbar-brand" href="login.html"><i class='bx bx-user-circle' ></i></a>
+                    <a class="navbar-brand" href="profile.html"><i class='bx bx-user-circle' ></i></a>
                 </div>
             </div>
           </div>
