--- a/profile.html
+++ b/profile.html
@@ -72,7 +72,18 @@
         </div>
       </nav>
       
-      <h1>PROFILE TEST</h1>
+      <div>
+        <div id = "profilePhoto">
+          
+        </div>
+      </div>
+      <!--profile info-->
+      <div id = "profile body">
+        <div id = "profile area">
+          <p id="name-goes-here"></p>
+          <p id="email-goes-here"></p>
+        </div>
+      </div>
 
     <!-- The body of your page goes here -->
 
