--- a/profile.html
+++ b/profile.html
@@ -56,14 +56,14 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="main.html">Home</a>
               </li>
             
               <li class="nav-item">
                 <a class="nav-link" href="#">Settings</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Something </a>
+                <a class="nav-link" href="#">Frequently Asked Questions </a>
               </li>
               
             </ul>
