--- a/profile.html
+++ b/profile.html
@@ -63,7 +63,7 @@
                 <a class="nav-link" href="#">Settings</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Frequently Asked Questions </a>
+                <a class="nav-link" href="login.html">Logout</a>
               </li>
               
             </ul>
