added temp timer placeholder screen that can be accessed through the bottom nav bar

--- a/timers.html
+++ b/timers.html
@@ -72,9 +72,11 @@
         </div>
       </nav>
 
-      <!--Dropdown welcome banner on page load-->
-      <div id="banner" class="banner">
-        <p id = "display-4"> Welcome,  <span id="name-goes-here"></span></p>
+
+
+      <!--blank area for timers-->
+      <div class = "timerArea">
+        <p>timer will eventually go here</p>
       </div>
       
 
@@ -87,7 +89,7 @@
                     <a class="navbar-brand" href="main.html"><i class='bx bx-home' ></i></a>
                 </div>
                 <div class="timers">
-                    <a class="navbar-brand" href="timers.html"><i class='bx bx-time-five' ></i></a>
+                    <a class="navbar-brand" href="#"><i class='bx bx-time-five' ></i></a>
                 </div>
                 <div class="user">
                     <a class="navbar-brand" href="profile.html"><i class='bx bx-user-circle' ></i></a>
