--- a/profile.html
+++ b/profile.html
@@ -94,10 +94,10 @@
                     <a class="navbar-brand" href="main.html"><i class='bx bx-home' ></i></a>
                 </div>
                 <div class="timers">
-                    <a class="navbar-brand" href="#"><i class='bx bx-time-five' ></i></a>
+                    <a class="navbar-brand" href="timers.html"><i class='bx bx-time-five' ></i></a>
                 </div>
                 <div class="user">
-                    <a class="navbar-brand" href="#"><i class='bx bx-user-circle' ></i></a>
+                    <a class="navbar-brand" href="profile.html"><i class='bx bx-user-circle' ></i></a>
                 </div>
             </div>
           </div>
