Applied JavaScript to navigation bar and footer to allow for easy application to html pages

--- a/main.html
+++ b/main.html
@@ -81,20 +81,7 @@
     <!-- The body of your page goes here -->
 
     <!-- Our own footer goes here-->
-          <nav class="navbar fixed-bottom bg-info">
-            <div class="navicons">
-                <div class="home">
-                    <a class="navbar-brand" href="main.html"><i class='bx bx-home' ></i></a>
-                </div>
-                <div class="timers">
-                    <a class="navbar-brand" href="timers.html"><i class='bx bx-time-five' ></i></a>
-                </div>
-                <div class="user">
-                    <a class="navbar-brand" href="profile.html"><i class='bx bx-user-circle' ></i></a>
-                </div>
-            </div>
-          </div>
-        </nav>
+    <nav id="footerPlaceholder"></nav>
 
     <!---------------------------------------------->
     <!-- Your own JavaScript functions go here    -->
