--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
     <!---------------------------------------------->
     <script src="./scripts/firebaseAPI_TEAM05.js"></script>
     <script src="./scripts/skeleton.js"></script>
+    <script src="./scripts/script.js"></script>
     <script>
         logout();       //make sure user is logged out
     </script>
