--- a/login.html
+++ b/login.html
@@ -60,15 +60,18 @@
 
 
        <!-- footer w/o icons-->
-        
+
     <!---------------------------------------------->
     <!-- Your own JavaScript functions go here    -->
     <!---------------------------------------------->
     <script src="./scripts/firebaseAPI_TEAM05.js"></script>
     <script src="./scripts/skeleton.js"></script>
     <script src="./scripts/authentication.js"></script>
+    <script src="./scripts/script.js"></script>
     <!-- <script src="./scripts/script.js"></script> -->
-
+    <script>
+        logout();       //make sure user is logged out
+    </script>
 </body>
 
 </html>
