Applied color palette and changed nav bar selection button selections

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>My BCIT Project</title>
+    <title>Landing Page</title>
     <meta name="comp1800 template" content="My 1800 App">
 
     <!-- Required meta tags -->
@@ -48,13 +48,10 @@
           <div class="card-body">
             <h5 class="card-title">Ready to Start a Consistent Routine?</h5>
             <p class="card-text">Click Below to Create Your First Schedule and Get Started Today!</p>
-            <a href="login.html" class="btn btn-primary" role="button">Start</a>
+            <a href="login.html" class="btn btn-custom" role="button">Start</a>
           </div>
         </div>
       </div>
-
-       <!-- footer w/o icons-->
-
     <!------------------------------>
     <!-- Stuff for body goes here -->
 
@@ -65,9 +62,6 @@
     <script src="./scripts/firebaseAPI_TEAM05.js"></script>
     <script src="./scripts/skeleton.js"></script>
     <script src="./scripts/script.js"></script>
-    <script>
-        logout();       //make sure user is logged out
-    </script>
 
     <!-- Link to scripts of your own -->
     <!-- <script src="./scripts/script.js"></script> -->
