--- a/text/footer.html
+++ b/text/footer.html
@@ -1,4 +1,4 @@
-<footer class="navbar fixed-bottom bg-info">
+<footer class="navbar fixed-bottom custom-navbar">
     <div class="navicons">
         <div class="home">
             <a class="navbar-brand" href="main.html"><i class='bx bx-home' ></i></a>
