--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>My BCIT Project</title>
+    <title>Login Page</title>
     <meta name="comp1800 template" content="My 1800 App">
 
     <!------------------------>
@@ -51,15 +51,12 @@
       <!--firebase login and welcome-->
     <div class="login">
         <div class="container">
-            <div class="welcome-text" style="text-align:center">
+            <div class="welcome-text" style="text-align:center; color: #0D1B2A;">
                 <h1>Welcome!</h1>
             </div>
             <div id="firebaseui-auth-container"></div>
         <div id="loader">Processing...</div>
     </div>
-
-
-       <!-- footer w/o icons-->
 
     <!---------------------------------------------->
     <!-- Your own JavaScript functions go here    -->
@@ -68,7 +65,7 @@
     <script src="./scripts/skeleton.js"></script>
     <script src="./scripts/authentication.js"></script>
     <script src="./scripts/script.js"></script>
-    <!-- <script src="./scripts/script.js"></script> -->
+
     <script>
         logout();       //make sure user is logged out
     </script>
