--- a/text/nav_after_login.html
+++ b/text/nav_after_login.html
@@ -1,7 +1,8 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-info">
+<nav class="navbar navbar-expand-lg custom-navbar">
     <div class="container-fluid">
       <a class="navbar-brand" href="main.html">RoutineSync</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
+      data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -12,6 +13,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">FAQ </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="login.html">Logout </a>
           </li>
           
         </ul>
