Added toast alert when user arrives from login page and removed welcome banner, changed color palette once again

--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
           <div class="card-body">
             <h5 class="card-title">Ready to Start a Consistent Routine?</h5>
             <p class="card-text">Click Below to Create Your First Schedule and Get Started Today!</p>
-            <a href="login.html" class="btn btn-custom" role="button">Start</a>
+            <div class="start-button">
+              <a href="login.html" class="btn btn-custom" role="button"><b>Start</b></a>
+            </div>
           </div>
         </div>
       </div>
