--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <h5 class="card-title">Ready to Start a Consistent Routine?</h5>
             <p class="card-text">Click Below to Create Your First Schedule and Get Started Today!</p>
             <div class="start-button">
-              <a href="login.html" class="btn btn-custom" role="button"><b>Start</b></a>
+              <a href="login.html" class="btn btn-custom" role="button">START</a>
             </div>
           </div>
         </div>
@@ -64,9 +64,6 @@
     <script src="./scripts/firebaseAPI_TEAM05.js"></script>
     <script src="./scripts/skeleton.js"></script>
     <script src="./scripts/script.js"></script>
-
-    <!-- Link to scripts of your own -->
-    <!-- <script src="./scripts/script.js"></script> -->
 
 </body>
 
