--- a/main.html
+++ b/main.html
@@ -53,10 +53,9 @@
   <div class="toast-container position-fixed bottom-1 end-0 p-3">
     <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
       <div class="toast-header">
-        <img src="..." class="rounded me-2" alt="...">
+        <img src="Toast-image.png" class="rounded me-2" alt="...">
         <strong class="me-auto">RoutineSync</strong>
-        <small>11 mins ago</small>
-        <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+        <small id="time-goes-here"></small>
       </div>
       <div class="toast-body">
         Welcome, <span id="name-goes-here" style="color:black"></span>
