--- a/text/nav_after_login.html
+++ b/text/nav_after_login.html
@@ -15,7 +15,7 @@
             <a class="nav-link" href="#">FAQ </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="login.html">Logout </a>
+            <a class="nav-link" href="index.html">Logout </a>
           </li>
           
         </ul>
