Created timer dropdown menu pages and added an add preset timer selection which displays input fields to input time values representing hours, minutes, and seconds

--- a/text/footer.html
+++ b/text/footer.html
@@ -3,8 +3,8 @@
         <div class="icon-circle">
             <a class="navbar-brandft" href="main.html"><i class='bx bx-home'></i></a>
         </div>
-        <div class="timers">
-            <a class="navbar-brand" href="timers.html"><i class='bx bx-time-five' ></i></a>
+        <div class="icon-circle">
+            <a class="navbar-brandft" href="countdown_timer.html"><i class='bx bx-time-five' ></i></a>
         </div>
         <div class="icon-circle">
             <a class="navbar-brandft" href="profile.html"><i class='bx bx-user-circle'></i></a>
