--- a/recent_timers.html
+++ b/recent_timers.html
@@ -95,18 +95,18 @@
     <!-- Our own footer goes here-->
     <footer class="navbar fixed-bottom custom-navbar">
       <div class="navicons">
-          <div class="home">
-              <a class="navbar-brand" href="main.html"><i class='bx bx-home' ></i></a>
+          <div class="icon-circle">
+              <a class="navbar-brandft" href="main.html"><i class='bx bx-home'></i></a>
           </div>
-          <div class="timers">
-              <a class="navbar-brand" href="recent_timers.html"><i class='bx bx-time-five' ></i></a>
+          <div class="icon-circle">
+              <a class="navbar-brandft" href="countdown_timer.html"><i class='bx bx-time-five' ></i></a>
           </div>
-          <div class="user">
-              <a class="navbar-brand" href="profile.html"><i class='bx bx-user-circle' ></i></a>
+          <div class="icon-circle">
+              <a class="navbar-brandft" href="profile.html"><i class='bx bx-user-circle'></i></a>
           </div>
       </div>
-    </div>
   </footer>
+  
 
     <!---------------------------------------------->
     <!-- Your own JavaScript functions go here    -->
