--- a/text/footer.html
+++ b/text/footer.html
@@ -1,12 +1,12 @@
 <footer class="navbar fixed-bottom custom-navbar">
     <div class="navicons">
-        <div class="icon-circle">
+        <div class="icon-circle" id="homeIcon">
             <a class="navbar-brandft" href="main.html"><i class='bx bx-home'></i></a>
         </div>
-        <div class="icon-circle">
+        <div class="icon-circle" id="timerIcon">
             <a class="navbar-brandft" href="countdown_timer.html"><i class='bx bx-time-five' ></i></a>
         </div>
-        <div class="icon-circle">
+        <div class="icon-circle" id="profileIcon">
             <a class="navbar-brandft" href="profile.html"><i class='bx bx-user-circle'></i></a>
         </div>
     </div>
