Created firestore to track preset timers for seperate users, made save preset, cancel preset, and add preset working button

--- a/preset_timers.html
+++ b/preset_timers.html
@@ -105,8 +105,8 @@
                   <input type="number" id="seconds" class="form-control" placeholder="Seconds" min="0" max="59">
               </div>
             </div>
-            <button id="start" class="btn btn-primary mt-1" style="width: 40%;">Save</button>
-            <button id="stop" class="btn btn-danger mt-1" style="width: 40%;">Cancel</button>
+            <button id="savePreset" class="btn btn-primary mt-1" style="width: 40%;">Save</button>
+            <button id="cancelPreset" class="btn btn-danger mt-1" style="width: 40%;">Cancel</button>
         </div>
       </div>
       
@@ -135,6 +135,7 @@
     <script src="./scripts/firebaseAPI_TEAM05.js"></script>
     <script src="./scripts/skeleton.js"></script>
     <script src="./scripts/main.js"></script>
+    <script src="./scripts/authentication.js"></script>
 
 </body>
 
