Added preset name field for preset timers

--- a/preset_timers.html
+++ b/preset_timers.html
@@ -91,9 +91,9 @@
       </div>
 
       <div id="presetTimerContainer" class="preset-timer" style="display: none;"> 
-        <h1 class="text-center">Create a Preset Timer</h1>
-        
-        <div class="text-center mt-4">
+        <h1 class="text-center mb-3">Create a Preset Timer</h1>
+        <input type="text" id="presetName" class="form-control" placeholder="Preset Name" style="text-align:Center;">
+        <div class="text-center mt-3">
             <div class="row mb-4">
                 <div class="col"> 
                     <input type="number" id="hours" class="form-control" placeholder="Hours" min="0" max="12">
