added arrays for friends and pending friends when user is created and added form for adding to pending friends on profile page (currently nonfuctional)

--- a/profile.html
+++ b/profile.html
@@ -62,6 +62,13 @@
         </div>
       </div>
 
+
+      <div class="friendsArea">
+        <label for="friendEmailInput" class="form-label-friend">Add a Friend By Email</label>
+        <input type="email" class="form-control" id="friendEmailInput" placeholder="name@example.com">
+        <button id="addFriendButton" class="btn btn-primary mt-2">Add Friend</button>
+      </div>
+      
     <!-- The body of your page goes here -->
 
     <!-- Our own footer goes here-->
