--- a/main.html
+++ b/main.html
@@ -62,6 +62,98 @@
       </div>
     </div>
   </div>
+  
+
+  <div class="container mt-4">
+    <div class="table-responsive">
+      <table class="table" style="text-align: center">
+        <thead>
+          <tr>
+            <th>Sun</th>
+            <th>Mon</th>
+            <th>Tue</th>
+            <th>Wed</th>
+            <th>Thu</th>
+            <th>Fri</th>
+            <th>Sat</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td><p></p></td>
+            <td><p></p></td>
+            <td><p></p></td>
+            <td><p></p></td>
+            <td><p></p></td>
+            <td><p>1</p></td>
+            <td><p>2</p></td>
+          </tr>
+          <tr>
+            <td><p>3</p></td>
+            <td><p>4</p></td>
+            <td><p>5</p></td>
+            <td><p>6</p></td>
+            <td><p>7</p></td>
+            <td><p>8</p></td>
+            <td><p>9</p></td>
+          </tr>
+          <tr>
+            <td><p>10</p></td>
+            <td><p>11</p></td>
+            <td><p>12</p></td>
+            <td><p>13</p></td>
+            <td><p>14</p></td>
+            <td><p>15</p></td>
+            <td><p>16</p></td>
+          </tr>
+          <tr>
+            <td><p>17</p></td>
+            <td><p>18</p></td>
+            <td><p>19</p></td>
+            <td><p>20</p></td>
+            <td><p>21</p></td>
+            <td><p>22</p></td>
+            <td><p>23</p></td>
+          </tr>
+          <tr>
+            <td><p>24</p></td>
+            <td><p>25</p></td>
+            <td><p>26</p></td>
+            <td><p>27</p></td>
+            <td><p>28</p></td>
+            <td><p>29</p></td>
+            <td><p>30</p></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+  
+
+  <div class="container mt-4">
+    <div class="row justify-content-center">
+      <div class="col-12 col-md-6 col-lg-4">
+        <a href="schedule.html" class="btn btn-primary btn-lg w-100" role="button" aria-pressed="true">Add new event</a>
+      </div>
+    </div>
+  </div>
+
+  <div class="container mt-4">
+    <h3>Upcoming Events</h3>
+    <ul id="eventList" class="list-group mt-3">
+      <li class="list-group-item">
+        <strong>Team Meeting</strong><br>
+        <small>2024-11-10 10:00 AM</small><br>
+        Team meeting
+      </li>
+      <li class="list-group-item">
+        <strong>Lab 1</strong><br>
+        <small>2024-11-12 3:00 PM</small><br>
+        Lab 1
+      </li>
+    </ul>
+  </div>
+
 
   <!-- Our own footer goes here-->
   <nav id="footerPlaceholder"></nav>
