moved js for friend requests to its own file

--- a/main.html
+++ b/main.html
@@ -63,6 +63,19 @@
     </div>
   </div>
   
+  <div class="toast-container position-fixed bottom-1 end-0 p-3">
+    <div id="friendRequestToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+      <div class="toast-header">
+        <img src="Toast-image.png" class="rounded me-2" alt="...">
+        <strong class="me-auto">RoutineSync</strong>
+        <small id="friend-request-time"></small>
+      </div>
+      <div class="toast-body">
+        Friend request from <span id="requester-id" style="color:black"></span>
+      </div>
+    </div>
+  </div>
+  
 
   <div class="container mt-4">
     <div class="table-responsive">
