--- a/profile.html
+++ b/profile.html
@@ -81,6 +81,7 @@
     <script src="./scripts/skeleton.js"></script>
     <script src="./scripts/main.js"></script>
     <script src="./scripts/script.js"></script>
+    <script src="./scripts/friends.js"></script>
 
 </body>
 
