added functonality to see pending and current friends, add friends from pending friends and remove friends from current friends. added toast method for basic alerts in main.js. fixed null request errors from timers and friend requests

--- a/main.html
+++ b/main.html
@@ -167,7 +167,13 @@
     </ul>
   </div>
 
-
+  <!-- toasts for notifs-->
+  <div id="basicToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+    <div class="toast-body">
+      <span id="toast-message"></span>
+    </div>
+  </div>
+  
   <!-- Our own footer goes here-->
   <nav id="footerPlaceholder"></nav>
 
