--- a/preset_timers.html
+++ b/preset_timers.html
@@ -110,7 +110,12 @@
         </div>
       </div>
       
-
+  <!-- toasts for notifs-->
+  <div id="basicToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+    <div class="toast-body">
+      <span id="toast-message"></span>
+    </div>
+  </div>
     <!-- The body of your page goes here -->
 
     <!-- Our own footer goes here-->
