added tracking for when preset timers are created to order them chronologically in display, created preset timer display placeholders (study timers and custom), added javascript to fill placeholders with data from firestore database, made it so the create preset timer display does not conflict with the default preset timer display

--- a/recent_timers.html
+++ b/recent_timers.html
@@ -93,19 +93,7 @@
     <!-- The body of your page goes here -->
 
     <!-- Our own footer goes here-->
-    <footer class="navbar fixed-bottom custom-navbar">
-      <div class="navicons">
-          <div class="icon-circle">
-              <a class="navbar-brandft" href="main.html"><i class='bx bx-home'></i></a>
-          </div>
-          <div class="icon-circle">
-              <a class="navbar-brandft" href="countdown_timer.html"><i class='bx bx-time-five' ></i></a>
-          </div>
-          <div class="icon-circle">
-              <a class="navbar-brandft" href="profile.html"><i class='bx bx-user-circle'></i></a>
-          </div>
-      </div>
-  </footer>
+    <nav id="footerPlaceholder"></nav>
   
 
     <!---------------------------------------------->
