some styling changes

--- a/preset_timers.html
+++ b/preset_timers.html
@@ -105,7 +105,7 @@
             <div class="form-check form-switch">
               <input class="form-check-input" type="checkbox" role="switch" style="transform: scale(1.25)">
               <label class="form-check-label" for="presetToggle"
-                style="min-width:60px; text-align:left; font-size:120%;">Inactive</label>
+                style="min-width:60px; text-align:left; font-size:80%;">Inactive</label>
             </div>
           </div>
         </div>
@@ -126,7 +126,7 @@
             <div class="form-check form-switch">
               <input class="form-check-input" type="checkbox" role="switch" style="transform: scale(1.25)">
               <label class="form-check-label" for="presetToggle"
-                style="min-width:60px; text-align:left; font-size:120%;">Inactive</label>
+                style="min-width:60px; max-width: 100%; text-align:left; font-size:80%;">Inactive</label>
             </div>
           </div>
         </div>
@@ -149,14 +149,13 @@
                   <p class="preset-hours">00 : </p>
                   <p class="preset-minutes">25 : </p>
                   <p class="preset-seconds">00</p>
-                  </p>
                 </div>
               </div>
             </div>
             <div class="form-check form-switch" id="toggleButton">
               <input class="form-check-input" type="checkbox" role="switch" style="transform: scale(1.25)">
               <label class="form-check-label" for="presetToggle"
-                style="min-width:60px; text-align:left; font-size:120%;">Inactive</label>
+                style="min-width:60px; text-align:left; font-size:80%;">Inactive</label>
             </div>
           </div>
         </div>
@@ -171,14 +170,13 @@
                   <p class="preset-hours">00 : </p>
                   <p class="preset-minutes">05 : </p>
                   <p class="preset-seconds">00</p>
-                  </p>
                 </div>
               </div>
             </div>
             <div class="form-check form-switch" id="toggleButton">
               <input class="form-check-input" type="checkbox" role="switch" style="transform: scale(1.25)">
               <label class="form-check-label" for="presetToggle"
-                style="min-width:60px; text-align:left; font-size:120%;">Inactive</label>
+                style="min-width:60px; text-align:left; font-size:80%;">Inactive</label>
             </div>
           </div>
         </div>
