Create visualization of current day on calender

--- a/main.html
+++ b/main.html
@@ -101,6 +101,13 @@
     </ul>
 </div>
 
+<div id="friendsEvents">
+  <h3>Friends' Upcoming Events</h3>
+  <ul id="friendsEventList" class="list-group">
+    <!-- Friend's events will be added here -->
+  </ul>
+</div>
+
   
   <!-- Our own footer goes here-->
   <nav id="footerPlaceholder"></nav>
