--- a/main.html
+++ b/main.html
@@ -53,7 +53,7 @@
   <div class="toast-container position-fixed bottom-1 end-0 p-3">
     <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
       <div class="toast-header">
-        <img src="Toast-image.png" class="rounded me-2" alt="...">
+        <img src="./images/Toast-image.png" class="rounded me-2" alt="...">
         <strong class="me-auto">RoutineSync</strong>
         <small id="time-goes-here"></small>
       </div>
@@ -63,7 +63,7 @@
       </div>
     </div>
   </div>
-  
+
 
   <div class="container mt-4">
     <div class="table-responsive">
@@ -84,7 +84,7 @@
       </table>
     </div>
   </div>
-  
+
 
   <div class="container mt-4">
     <div class="row justify-content-center">
@@ -97,18 +97,18 @@
   <div class="container mt-4">
     <h3>Upcoming Events</h3>
     <ul id="eventList" class="list-group mt-3">
-        <!-- events -->
+      <!-- events -->
     </ul>
-</div>
+  </div>
 
-<div id="friendsEvents">
-  <h3>Friends' Upcoming Events</h3>
-  <ul id="friendsEventList" class="list-group">
-    <!-- Friend's events will be added here -->
-  </ul>
-</div>
+  <div id="friendsEvents">
+    <h3>Friends' Upcoming Events</h3>
+    <ul id="friendsEventList" class="list-group">
+      <!-- Friend's events will be added here -->
+    </ul>
+  </div>
 
-  
+
   <!-- Our own footer goes here-->
   <nav id="footerPlaceholder"></nav>
 
