--- a/preset_timers.html
+++ b/preset_timers.html
@@ -93,7 +93,7 @@
         <div id="timerPresets" class="list-group">
           <div class="list-group-item d-flex justify-content-between align-items-center">
             <div class="timeContainer">
-              <span class="preset-name font-weight-bold">Processing...</span>
+              <span class="preset-name font-weight-bold">Blank Timer</span>
               <div class="row mt-2">
                 <div class="col">
                   <p class="preset-hours">00 : </p>
@@ -114,7 +114,7 @@
         <div id="timerPresets" class="list-group">
           <div class="list-group-item d-flex justify-content-between align-items-center">
             <div class="timeContainer">
-              <span class="preset-name font-weight-bold">Processing...</span>
+              <span class="preset-name font-weight-bold">Blank Timer</span>
               <div class="row mt-2">
                 <div class="col">
                   <p class="preset-hours">00 : </p>
@@ -182,7 +182,7 @@
         </div>
       </div>
     </div>
-    <div class="emptySpace" style="padding-bottom: 20%;">
+    <div class="emptySpace" style="padding-bottom: 30%;">
     </div>
   </div>
 
