--- a/recent_timers.html
+++ b/recent_timers.html
@@ -47,34 +47,7 @@
   <!------------------------------>
 
   <!-- Our own navbar goes here -->
-  <nav class="navbar navbar-expand-lg custom-navbar">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="main.html">RoutineSync</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contact Us</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">FAQ </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="login.html">Logout </a>
-          </li>
-
-        </ul>
-
-      </div>
-    </div>
-  </nav>
-
-
-
+  <nav id="navbarPlaceholder"></nav>
 
 
   <!--blank area for timers-->
