--- a/text/footer.html
+++ b/text/footer.html
@@ -1,4 +1,4 @@
-<footer class="navbar fixed-bottom custom-navbar">
+<footer class="navbar fixed-bottom custom-navbar top-shadow p-3 bg-body rounded">
     <div class="navicons">
         <div class="icon-circle" id="homeIcon">
             <a class="navbar-brandft" href="main.html"><i class='bx bx-home'></i></a>
