Fixed website appearance to look better with larger screen sizes

--- a/countdownTimers.html
+++ b/countdownTimers.html
@@ -56,11 +56,12 @@
     </a>
 
     <ul class="dropdown-menu">
-      <li><a class="dropdown-item" href="recent_timers.html">Recent Timers</a></li>
-      <li><a class="dropdown-item" href="preset_timers.html">Preset Timers</a></li>
+      <li><a class="dropdown-item" href="recentTimers.html">Recent Timers</a></li>
+      <li><a class="dropdown-item" href="presetTimers.html">Preset Timers</a></li>
     </ul>
   </div>
 
+  <!-- The body of your page goes here -->
   <div id="countdownTimerContainer" class="countdownTimer" style="display: block;">
     <div class="text-center mt-3" style="width: 80%; margin: 0 auto;">
       <div class="row mb-4">
@@ -95,7 +96,6 @@
       <button id="startTimer" class="btn btn-primary mt-1" style="width: 40%;">Start</button>
     </div>
   </div>
-  <!-- The body of your page goes here -->
 
   <!-- Our own footer goes here-->
   <nav id="footerPlaceholder"></nav>
