--- a/text/footer.html
+++ b/text/footer.html
@@ -4,7 +4,7 @@
             <a class="navbar-brandft" href="main.html"><i class='bx bx-home'></i></a>
         </div>
         <div class="icon-circle" id="timerIcon">
-            <a class="navbar-brandft" href="countdown_timer.html"><i class='bx bx-time-five' ></i></a>
+            <a class="navbar-brandft" href="countdownTimers.html"><i class='bx bx-time-five' ></i></a>
         </div>
         <div class="icon-circle" id="profileIcon">
             <a class="navbar-brandft" href="profile.html"><i class='bx bx-user-circle'></i></a>
