--- a/presetTimers.html
+++ b/presetTimers.html
@@ -58,29 +58,29 @@
 
     <button id="addTimerButton" class="btn btn-custom">Create Preset</button>
     <ul class="dropdown-menu">
-      <li><a class="dropdown-item" href="recent_timers.html">Recent Timers</a></li>
-      <li><a class="dropdown-item" href="countdown_timer.html">Countdown Timer</a></li>
+      <li><a class="dropdown-item" href="recentTimers.html">Recent Timers</a></li>
+      <li><a class="dropdown-item" href="countdownTimers.html">Countdown Timer</a></li>
     </ul>
   </div>
 
   <div id="presetTimerContainer" class="preset-timer" style="display: none;">
     <h1 class="text-center">Create a Preset Timer</h1>
-    <input type="text" id="presetName" class="form-control" placeholder="Preset Name" style="text-align:Center;"
+    <input type="text" id="presetName" class="form-control" placeholder="Preset Name" style="text-align:Center; padding-top: 2%; padding-bottom: 2%; font-size: 150%;"
       maxlength="18">
     <div class="text-center mt-3">
       <div class="row mb-4">
         <div class="col">
-          <input type="number" id="hours" class="form-control" style="text-align:Center;" placeholder="Hours" min="0" max="99">
+          <input type="number" id="hours" class="form-control" style="text-align:Center; padding-top: 2%; padding-bottom: 2%; font-size: 125%;" placeholder="Hours" min="0" max="99">
         </div>
         <div class="col">
-          <input type="number" id="minutes" class="form-control" style="text-align:Center;" placeholder="Minutes" min="0" max="59">
+          <input type="number" id="minutes" class="form-control" style="text-align:Center; padding-top: 2%; padding-bottom: 2%; font-size: 125%;" placeholder="Minutes" min="0" max="59">
         </div>
         <div class="col">
-          <input type="number" id="seconds" class="form-control" style="text-align:Center;"placeholder="Seconds" min="0" max="59">
+          <input type="number" id="seconds" class="form-control" style="text-align:Center; padding-top: 2%; padding-bottom: 2%; font-size: 125%;"placeholder="Seconds" min="0" max="59">
         </div>
       </div>
-      <button id="savePreset" class="btn btn-primary mt-1" style="width: 40%;">Save</button>
-      <button id="cancelPreset" class="btn btn-danger mt-1" style="width: 40%;">Cancel</button>
+      <button id="savePreset" class="btn btn-primary mt-1" style="width: 30%; padding-top: 1%; padding-bottom: 1%; ">Save</button>
+      <button id="cancelPreset" class="btn btn-danger mt-1" style="width: 30%; padding-top: 1%; padding-bottom: 1%;">Cancel</button>
     </div>
   </div>
 
