--- a/recentTimers.html
+++ b/recentTimers.html
@@ -58,8 +58,8 @@
     </a>
 
     <ul class="dropdown-menu">
-      <li><a class="dropdown-item" href="countdown_timer.html">Countdown Timer</a></li>
-      <li><a class="dropdown-item" href="preset_timers.html">Preset Timers</a></li>
+      <li><a class="dropdown-item" href="countdownTimers.html">Countdown Timer</a></li>
+      <li><a class="dropdown-item" href="presetTimers.html">Preset Timers</a></li>
     </ul>
   </div>
 
