--- a/text/nav_before_login.html
+++ b/text/nav_before_login.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg custom-navbar shadow p-3 mb-5 bg-body rounded">
+<nav class="navbar fixed-top navbar-expand-lg custom-navbar shadow p-3 mb-5 bg-body rounded">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">RoutineSync</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
