Changed recent timers to alarm timers

--- a/countdownTimers.html
+++ b/countdownTimers.html
@@ -56,7 +56,7 @@
     </a>
 
     <ul class="dropdown-menu">
-      <li><a class="dropdown-item" href="recentTimers.html">Recent Timers</a></li>
+      <li><a class="dropdown-item" href="alarmTimers.html">Alarm Timers</a></li>
       <li><a class="dropdown-item" href="presetTimers.html">Preset Timers</a></li>
     </ul>
   </div>
@@ -70,8 +70,8 @@
           <button id="upHours" style="font-size: 150%;">˄</button>
           <p id="prevHour">99</p>
           <input type="number" style="padding-top: 15%; padding-bottom: 15%; text-align: center; font-size: 150%;" id="hoursCount" class="form-control" 
-          placeholder="00" min="0" max="99">
-          <p id="nextHour" style="margin-top: 1rem;">01</p>
+          placeholder="0" min="0" max="99">
+          <p id="nextHour" style="margin-top: 1rem;">1</p>
           <button id="downHours" style="font-size: 150%;">˅</button>
         </div>
         <div class="col">
@@ -79,8 +79,8 @@
           <button id="upMinutes" style="font-size: 150%;">˄</button>
           <p id="prevMinute">59</p>
           <input type="number" style="padding-top: 15%; padding-bottom: 15%;  text-align: center; font-size: 150%;" id="minutesCount" class="form-control" 
-          placeholder="00" min="0" max="59">
-          <p id="nextMinute" style="margin-top: 1rem">01</p>
+          placeholder="0" min="0" max="59">
+          <p id="nextMinute" style="margin-top: 1rem">1</p>
           <button id="downMinutes" style="font-size: 150%;">˅</button>
         </div>
         <div class="col">
@@ -88,8 +88,8 @@
           <button id="upSeconds" style="font-size: 150%;">˄</button>
           <p id="prevSecond">59</p>
           <input type="number" style="padding-top: 15%; padding-bottom: 15%;  text-align: center; font-size: 150%;" id="secondsCount" class="form-control" 
-          placeholder="00" min="0" max="59">
-          <p id="nextSecond" style="margin-top: 1rem">01</p>
+          placeholder="0" min="0" max="59">
+          <p id="nextSecond" style="margin-top: 1rem;">1</p>
           <button id="downSeconds" style="font-size: 150%;">˅</button>
         </div>
       </div>
