--- a/presetTimers.html
+++ b/presetTimers.html
@@ -58,7 +58,7 @@
 
     <button id="addTimerButton" class="btn btn-custom">Create Preset</button>
     <ul class="dropdown-menu">
-      <li><a class="dropdown-item" href="recentTimers.html">Recent Timers</a></li>
+      <li><a class="dropdown-item" href="alarmTimers.html">Alarm Timers</a></li>
       <li><a class="dropdown-item" href="countdownTimers.html">Countdown Timer</a></li>
     </ul>
   </div>
