--- a/alarmTimers.html
+++ b/alarmTimers.html
@@ -54,7 +54,7 @@
   <div class="dropdown">
     <a class="btn btn-custom dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"
       style="background:white;">
-      <u>Recent Timers</u>
+      <u>Alarm Timers</u>
     </a>
 
     <ul class="dropdown-menu">
@@ -62,7 +62,6 @@
       <li><a class="dropdown-item" href="presetTimers.html">Preset Timers</a></li>
     </ul>
   </div>
-
 
   <!-- The body of your page goes here -->
 
