made a circle on the dates with events on the calendar to make it easy to check the schedule

--- a/main.html
+++ b/main.html
@@ -85,6 +85,7 @@
           </tr>
         </thead>
         <tbody>
+          <!--date-->
         </tbody>
       </table>
     </div>
@@ -109,7 +110,7 @@
   <div class="container mt-4" style="padding-bottom: 40%;">
     <h3>Friends' Upcoming Events</h3>
     <ul id="friendsEventList" class="list-group">
-      <!-- Friend's events will be added here -->
+      <!-- Friend's events -->
     </ul>
   </div>
 
