--- a/schedule.html
+++ b/schedule.html
@@ -47,33 +47,6 @@
   <!-- Your HTML Layout go here -->
   <!------------------------------>
 
-  <!-- Our own navbar goes here -->
-  <nav class="navbar navbar-expand-lg custom-navbar">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="main.html">RoutineSync</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contact Us</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">FAQ </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="login.html">Logout </a>
-          </li>
-
-        </ul>
-
-      </div>
-    </div>
-  </nav>
-
 
   <!-- The body of your page goes here -->
   <div class="container mt-5">
@@ -109,20 +82,10 @@
   </div>
 
 
+  <!-- Our own navbar goes here -->
+  <nav id="navbarPlaceholder"></nav>
   <!-- Our own footer goes here-->
-  <footer class="navbar fixed-bottom custom-navbar">
-    <div class="navicons">
-      <div class="icon-circle">
-        <a class="navbar-brandft" href="main.html"><i class='bx bx-home'></i></a>
-      </div>
-      <div class="icon-circle">
-        <a class="navbar-brandft" href="countdown_timer.html"><i class='bx bx-time-five'></i></a>
-      </div>
-      <div class="icon-circle">
-        <a class="navbar-brandft" href="profile.html"><i class='bx bx-user-circle'></i></a>
-      </div>
-    </div>
-  </footer>
+  <nav id="footerPlaceholder"></nav>
 
 
   <!---------------------------------------------->
